# VKR

./: CMakeLists.txt
include/VKR/: VKR.hpp  VKRMatrix.hpp  VKRMesh.hpp  VKRTypes.hpp  VKRVulkan.hpp
src/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  GraphicsDevice.cpp  GraphicsDevice.hpp  IDPacking.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  Internal.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  Queues.hpp  Scene.cpp  Scene.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  Sync.hpp  VKR.cpp  VKRCommands.cpp  VKRCommands.hpp  VKRDebugMessenger.cpp  VKRDebugMessenger.hpp  VKRDevice.cpp  VKRDevice.hpp  VKRInstance.cpp  VKRInstance.hpp  VKRInternal.hpp  VKRMemory.cpp  VKRMemory.hpp  VKRMesh.cpp  VKRMeshInternal.hpp  VKRPipeline.cpp  VKRPipeline.hpp  (+15 more)
